add PYTHONPATH env var

--- a/fly.toml.template
+++ b/fly.toml.template
@@ -6,6 +6,9 @@ app = "ca-wildfire-risk"
 kill_signal = "SIGINT"
 kill_timeout = 5
 
+[env]
+  PYTHONPATH = "/app"
+
 [experimental]
   allowed_public_ports = []
   auto_rollback = true
