--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ pandas
 numpy
 matplotlib
 sphinx
+sphinx_rtd_theme
 pytest
 pytest-cov
 coverage
@@ -12,3 +13,4 @@ statsmodels
 sklearn
 dash-leaflet
 dash_daq
+geopy
